# trip_planner_from_scratch

./: agents.py  main.py  pyproject.toml  tasks.py
Tools/: calculator_tools.py  search_tools.py
